myteo/test/analyze/name_resolution/assignment/unresolved_name_error.exp
Error: Could not resolve name `x` to value
test/analyze/name_resolution/assignment/unresolved_name_error.myte:8:2
 8 |   x = 1;
   |   ^

Error: Could not resolve name `x` to value
test/analyze/name_resolution/assignment/unresolved_name_error.myte:9:3
 9 |   (x, y) = 1;
   |    ^

Error: Could not resolve name `y` to value
test/analyze/name_resolution/assignment/unresolved_name_error.myte:9:6
 9 |   (x, y) = 1;
   |       ^

Error: Could not resolve name `x` to value
test/analyze/name_resolution/assignment/unresolved_name_error.myte:10:21
 10 |   Rec { field1: Tup (x), y } = 1;
    |                      ^

Error: Could not resolve name `y` to value
test/analyze/name_resolution/assignment/unresolved_name_error.myte:10:25
 10 |   Rec { field1: Tup (x), y } = 1;
    |                          ^